Fixed some spacing issues

--- a/src/Pages/AboutUs.css
+++ b/src/Pages/AboutUs.css
@@ -15,8 +15,8 @@
   font-family: 'HKGrotesk-Bold-Legacy';
   font-weight: bold;
   font-size: calc(5px + 2.3vw + 0.8vh);
-  line-height: 1.5;
-  letter-spacing: 0.15vw;
+  line-height: 6.3vh;
+  letter-spacing: 0.08vw;
   color: #787878;
 }
 #AboutUsParagraph em {
